CHANGES for THREDDS Data Server (TDS)
Version @VERSION.MINOR@
Build Date = @BUILDTIME@
Build Name = @BUILD.NAME@

Release Details 4.2:
 4.2.3 (2010-12-xx)
   TomcatAuthorizer is appending "auth" to redirected URL, not sure why but it breaks opendap
   GridServlet (ncss) traps Throwable, not just Exception
   tom kunicki's patch on CdmrFeatureController
   change 404.jsp 500.jsp from 4.0 to 4.2
   GridCoordSys.getDateRange() now works for 2D time coord: WCS failed on FMRC 2D datase 
   fix default cache dir for WCS, ncss
   FMRC bug in constant offset datasets when offset didnt start at 0.
   FMRC now has vars, bounding box, and date range metadata correct.
   CdmrFeature service for point collections
   InvFeatureCollection type=POINT, STATION

 4.2.2 (2010-12-16)
   Fold in ncWMS PixelMap fix (TDS-147)
   Fix problem where TDS running in Tomcat 5.5 throws errors on WMS requests: NoClassDefFoundError for ClientAbortException (TDS-146).
   Fix idv, toolsui jnlp files for viewer links

 4.2.1 (2010-12-01)
   Fix ThreddsConfig logging.

 4.2.0 (2010-11-19)
   Turn off debug messages
   Improve large file handling in FileWriter and NetcdfCFWriter

 4.2 release candidate 8 (2010-11-18)
   bug in BDB create permission
 
 4.2 release candidate 7 (2010-11-16)
   improve logging of threddsConfig.xml configuration settings
   improve WMS initialization
   various minor bug fixes
   
 4.2 release candidate 6 (2010-11-05)
   fix handling of unknown projections by WCS (TDS-138)
   add support for server information requests (TDS-137)
   fix WMS handling of ClientAbortExceptions

 4.2 release candidate 5 (2010-11-02)
   add tdsMonitor role, for /thredds/admin/log/*
   TDS reinit calls MetadataManager.closeAll
   add bdb cache statistics in admin
   Jon Blower's fixes for PixelMap
   catch java.net.SocketException in Thredds.WmsController

 4.2 release candidate 4 (2010-10-25)
   GridVariable : remove check for same data on duplicate record - too expensive 